src/test/ui/error-codes/E0437.stderr
error[E0437]: type `Bar` is not a member of trait `Foo`
  --> $DIR/E0437.rs:14:5
   |
14 |     type Bar = bool; //~ ERROR E0437
   |     ^^^^^^^^^^^^^^^^ not a member of trait `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0437`.
